--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
             <div class="aboutBtn btn btn-info" ng-click="refresh()">About</div>
 
-            <div class="exitBtn btn btn-warning">Exit</div>
+            <div class="exitBtn btn btn-warning" ng-click="exit()">Exit</div>
         </div>
 
         <script type="text/javascript" src="cordova.js"></script>
